argocd/ingress-controller-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-lb
  namespace: ingress-controller
  labels:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: ingress-controller
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: kubernetes-ingress
    app.kubernetes.io/instance: ingress-controller
