argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    haproxy.org/ssl-redirect: "false"
    haproxy.org/backend-config-snippet: |
      http-request set-header X-Forwarded-Proto https if { ssl_fc }
      http-request set-header X-Forwarded-Port 443 if { ssl_fc }
      http-request set-header X-Forwarded-Port 80 if !{ ssl_fc }
spec:
  ingressClassName: haproxy
  rules:
  - host: argocd.192.168.101.233.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
